--- a/hello/static/css/Demo.css
+++ b/hello/static/css/Demo.css
@@ -155,6 +155,7 @@
         border-radius: 5px;
         letter-spacing: 1px;
         transform: translateY(20px);
+        z-index: 999 !important;
     }
 
     .demo_tooltip:hover:before,
