--- a/hello/templates/Demo.html
+++ b/hello/templates/Demo.html
@@ -59,7 +59,7 @@
 
     <div class="main"></div>
     <div id="datasetImageModal" class="modal fade" role="dialog" style="text-align:center;">
-        <img src="{% static "css/dataset.png" %}" style="width:600px; margin-top:200px;" />
+        <img src="{% static "css/dataset.jpg" %}" style="width:600px; margin-top:200px;" />
     </div>
 
 
@@ -88,7 +88,7 @@ function run() {
     <script>
         //am4core.useTheme(am4themes_frozen);
         am4core.useTheme(am4themes_animated);
-        currentEvent="NEWTOT"
+        currentEvent="LIVARS"
         tweetList = [];
         var h = $('.main').height();
         $('.main').height(h - 130);
