--- a/hello/templates/Demo.html
+++ b/hello/templates/Demo.html
@@ -11,6 +11,7 @@
     <script src="https://www.amcharts.com/lib/4/charts.js"></script>
     <script src="https://www.amcharts.com/lib/4/themes/frozen.js"></script>
     <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
+    <link rel="icon" type="icon" href="{% static "css/favicon.ico" %}">
 </head>
 <body style="background-color: #F6FEFD">
    <div class="container">
