--- a/hello/templates/Demo.html
+++ b/hello/templates/Demo.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="icon" href="{% static "css/favicon.ico" %}">
 </head>
 <body style="background-color: #F6FEFD">
-   <div class="container">
+   <div style="margin-left:40px;">
         <div class="row">
             <div class="col-md">
                 <h2 class="text-primary">&nbsp;&nbsp;Time2Event</h2>
