--- a/hello/templates/Demo.html
+++ b/hello/templates/Demo.html
@@ -51,8 +51,8 @@
         </div>
         <div style="position:absolute;right:40px;display:inline-block;">
             <button type="button" class="btn" data-toggle="tooltip" data-placement="bottom" title="Tweet Posted on the event's Day" style="background-color: #12B8F9; height: 40px; width: 40px; margin-right: 20px; color:white;"> <i class="fab fa-lg fa-twitter"></i></button>
-            <button type="button" class="btn" data-toggle="tooltip" data-placement="bottom" title="Tweet Posted before the event" style="background-color: #FB0F82; height: 40px; width: 40px; margin-right: 20px;color:white; "> <i class="fab fa-lg fa-twitter"></i></button>
-            <button type="button" class="btn" data-toggle="tooltip" data-placement="bottom" title="Tweet Posted after the event" style="background-color: #00FA82; height: 40px; width: 40px; margin-right: 20px; color: white; "><i class="fab fa-lg fa-twitter"></i> </button>
+            <button type="button" class="btn" data-toggle="tooltip" data-placement="bottom" title="Tweet Posted after the event" style="background-color: #FB0F82; height: 40px; width: 40px; margin-right: 20px;color:white; "> <i class="fab fa-lg fa-twitter"></i></button>
+            <button type="button" class="btn" data-toggle="tooltip" data-placement="bottom" title="Tweet Posted before the event" style="background-color: #00FA82; height: 40px; width: 40px; margin-right: 20px; color: white; "><i class="fab fa-lg fa-twitter"></i> </button>
         </div>
 
 
@@ -503,9 +503,9 @@ function run() {
             pieSeries.hiddenState.properties.endAngle = -90;
             pieSeries.hiddenState.properties.startAngle = -90;
             pieSeries.colors.list = [
-                  am4core.color("#FB0F82"),
-                  am4core.color("#098ED9"),
                   am4core.color("#00FA82"),
+                  am4core.color("#098ED9"),
+                  am4core.color("#FB0F82"),
 
             ];
         }
