--- a/hello/templates/Demo.html
+++ b/hello/templates/Demo.html
@@ -477,13 +477,13 @@ function run() {
 
             chart1.data = [
                 {
-                    "Label": "Past",
+                    "Label": "befor",
                     "Value": num1
                 }, {
-                    "Label": "Ongoing",
+                    "Label": "same day",
                     "Value": num2
                 }, {
-                    "Label": "Future",
+                    "Label": "after",
                     "Value": num3
                 }
             ];
