--- a/hello/templates/Demo.html
+++ b/hello/templates/Demo.html
@@ -76,7 +76,7 @@
 
 <div class="main"></div>
 <div id="datasetImageModal" class="modal fade" role="dialog" style="text-align:center;">
-    <img src="{% static "css/dataset1.jpg" %}" style="width:600px; margin-top:200px;"/>
+    <img src="{% static "css/dataset1.JPG" %}" style="width:600px; margin-top:200px;"/>
 </div>
 
 
